Data Quality Checks

--- a/notebooks/01_eda_preprocessing.ipynb
+++ b/notebooks/01_eda_preprocessing.ipynb
@@ -468,11 +468,558 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "92b64f5c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0                0\n",
+       "mmsi                      0\n",
+       "navigationalstatus        0\n",
+       "sog                     458\n",
+       "cog                    3169\n",
+       "heading               20614\n",
+       "shiptype                  0\n",
+       "width                  3711\n",
+       "length                 3743\n",
+       "draught               25543\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Count missing values per column\n",
+    "ais_data.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "1af629b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicate rows found: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for duplicate rows\n",
+    "dup_count = ais_data.duplicated().sum()\n",
+    "print(f\"Duplicate rows found: {dup_count}\")\n",
+    "if dup_count > 0:\n",
+    "    print(\"Duplicated rows:\")\n",
+    "    print(ais_data[ais_data.duplicated()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "915c8a6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unrealistic SOG rows: 2888\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mmsi</th>\n",
+       "      <th>navigationalstatus</th>\n",
+       "      <th>sog</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1518</th>\n",
+       "      <td>111219513</td>\n",
+       "      <td>Under way using engine</td>\n",
+       "      <td>69.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1527</th>\n",
+       "      <td>111219513</td>\n",
+       "      <td>Under way using engine</td>\n",
+       "      <td>102.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1537</th>\n",
+       "      <td>111219513</td>\n",
+       "      <td>Under way using engine</td>\n",
+       "      <td>102.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1540</th>\n",
+       "      <td>111219513</td>\n",
+       "      <td>Under way using engine</td>\n",
+       "      <td>102.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1544</th>\n",
+       "      <td>111219513</td>\n",
+       "      <td>Under way using engine</td>\n",
+       "      <td>102.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           mmsi      navigationalstatus    sog\n",
+       "1518  111219513  Under way using engine   69.2\n",
+       "1527  111219513  Under way using engine  102.2\n",
+       "1537  111219513  Under way using engine  102.2\n",
+       "1540  111219513  Under way using engine  102.2\n",
+       "1544  111219513  Under way using engine  102.2"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for unrealistic Speeed-over-Ground (SOG) values: SOG < 0 or SOG > 60 knots.\n",
+    "unreal_sog = ais_data[(ais_data[\"sog\"] < 0) | (ais_data[\"sog\"] > 60)]\n",
+    "print(\"Unrealistic SOG rows:\", len(unreal_sog))\n",
+    "unreal_sog[[\"mmsi\", \"navigationalstatus\", \"sog\"]].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "e887f109",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unrealistic heading rows: 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mmsi</th>\n",
+       "      <th>navigationalstatus</th>\n",
+       "      <th>heading</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>145692</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157056</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>257390</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>354713</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         mmsi  navigationalstatus  heading\n",
+       "145692  False               False    False\n",
+       "157056  False               False    False\n",
+       "257390  False               False    False\n",
+       "354713  False               False    False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for unrealistic compass direciton/heading outside values: [0, 360] range in degrees.\n",
+    "unreal_heading = ais_data[ais_data[\"heading\"] < 0] | ais_data[ais_data[\"heading\"] > 360]\n",
+    "print(\"Unrealistic heading rows:\", len(unreal_heading))\n",
+    "unreal_heading[[\"mmsi\", \"navigationalstatus\", \"heading\"]].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "9f76d275",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nonpositive draught rows: 0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mmsi</th>\n",
+       "      <th>shiptype</th>\n",
+       "      <th>length</th>\n",
+       "      <th>width</th>\n",
+       "      <th>draught</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [mmsi, shiptype, length, width, draught]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for unrealistic draught (How deep the ship is submerged in the water in meters) values: Draught <= 0 m. \n",
+    "print(\"Nonpositive draught rows:\", len(unreal_draught))\n",
+    "unreal_draught[[\"mmsi\", \"shiptype\", \"length\", \"width\", \"draught\"]].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "3d4027cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unrealistic length/width rows: 56\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mmsi</th>\n",
+       "      <th>shiptype</th>\n",
+       "      <th>length</th>\n",
+       "      <th>width</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>76551</th>\n",
+       "      <td>211422510</td>\n",
+       "      <td>Tanker</td>\n",
+       "      <td>690.0</td>\n",
+       "      <td>28.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124552</th>\n",
+       "      <td>219013964</td>\n",
+       "      <td>Reserved</td>\n",
+       "      <td>295.0</td>\n",
+       "      <td>78.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124636</th>\n",
+       "      <td>219013964</td>\n",
+       "      <td>Reserved</td>\n",
+       "      <td>295.0</td>\n",
+       "      <td>78.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124777</th>\n",
+       "      <td>219013964</td>\n",
+       "      <td>Reserved</td>\n",
+       "      <td>295.0</td>\n",
+       "      <td>78.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124879</th>\n",
+       "      <td>219013964</td>\n",
+       "      <td>Reserved</td>\n",
+       "      <td>295.0</td>\n",
+       "      <td>78.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             mmsi  shiptype  length  width\n",
+       "76551   211422510    Tanker   690.0   28.0\n",
+       "124552  219013964  Reserved   295.0   78.0\n",
+       "124636  219013964  Reserved   295.0   78.0\n",
+       "124777  219013964  Reserved   295.0   78.0\n",
+       "124879  219013964  Reserved   295.0   78.0"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for unrealistic length/widths: Length <= 0 or Width <= 0 or Length > 400 or Width > 60.\n",
+    "unreal_size = ais_data[\n",
+    "    (ais_data[\"length\"] <= 0) | (ais_data[\"width\"] <= 0) |\n",
+    "    (ais_data[\"length\"] > 400) | (ais_data[\"width\"] > 60)\n",
+    "]\n",
+    "print(\"Unrealistic length/width rows:\", len(unreal_size))\n",
+    "unreal_size[[\"mmsi\", \"shiptype\", \"length\", \"width\"]].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82972ddc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    357893.000000\n",
+       "mean         12.122554\n",
+       "std           9.355851\n",
+       "min           0.000000\n",
+       "25%           9.200000\n",
+       "50%          11.300000\n",
+       "75%          13.300000\n",
+       "max         214.000000\n",
+       "Name: sog, dtype: float64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Speed-over-Ground (SOG) validity check\n",
+    "ais_data[\"sog\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d96bdfe4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    337737.000000\n",
+       "mean        190.076829\n",
+       "std         107.107604\n",
+       "min           0.000000\n",
+       "25%         120.000000\n",
+       "50%         170.000000\n",
+       "75%         303.000000\n",
+       "max         507.000000\n",
+       "Name: heading, dtype: float64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compass direction/heading validity check\n",
+    "ais_data[\"heading\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10ff6e86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    332808.000000\n",
+       "mean          6.571402\n",
+       "std           2.934392\n",
+       "min           0.400000\n",
+       "25%           4.600000\n",
+       "50%           6.100000\n",
+       "75%           7.900000\n",
+       "max          25.500000\n",
+       "Name: draught, dtype: float64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Draught validity check\n",
+    "ais_data[\"draught\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba5609bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    354608.000000\n",
+       "mean        124.971549\n",
+       "std          71.268183\n",
+       "min           2.000000\n",
+       "25%          83.000000\n",
+       "50%         115.000000\n",
+       "75%         181.000000\n",
+       "max         690.000000\n",
+       "Name: length, dtype: float64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Length validity check\n",
+    "ais_data[\"length\"].describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ab2c8a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    354640.000000\n",
+       "mean         19.947854\n",
+       "std          10.808627\n",
+       "min           1.000000\n",
+       "25%          12.000000\n",
+       "50%          17.000000\n",
+       "75%          28.000000\n",
+       "max          78.000000\n",
+       "Name: width, dtype: float64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Width validity check\n",
+    "ais_data[\"width\"].describe()"
+   ]
   },
   {
    "cell_type": "markdown",
