Modified 01_eda_preprocessing.ipynb & Created ais_data_model_ready.csv

--- a/notebooks/01_eda_preprocessing.ipynb
+++ b/notebooks/01_eda_preprocessing.ipynb
@@ -2316,6 +2316,81 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "49033a44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape:\n",
+      "  Raw: (358351, 10)\n",
+      "  Model-ready: (326066, 8)\n",
+      "\n",
+      "Columns:\n",
+      "  Raw: ['Unnamed: 0', 'mmsi', 'navigationalstatus', 'sog', 'cog', 'heading', 'shiptype', 'width', 'length', 'draught']\n",
+      "  Model-ready: ['sog', 'cog', 'heading', 'width', 'length', 'draught', 'shiptype', 'navigationalstatus']\n",
+      "\n",
+      "ID columns removed?\n",
+      "  mmsi in raw: True, in model: False\n",
+      "  Unnamed: 0 in raw: True, in model: False\n",
+      "\n",
+      "Target classes:\n",
+      "  Raw: 13 classes\n",
+      "  Model-ready: 11 classes\n",
+      "  Dropped: {'Reserved for future amendment [WIG]', 'Not under command'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sanity check differences between raw and model-ready data\n",
+    "raw = pd.read_csv(\"../data/ais_data.csv\")\n",
+    "model = pd.read_csv(\"../data/ais_data_model_ready.csv\")\n",
+    "\n",
+    "print(\"Shape:\")\n",
+    "print(f\"  Raw: {raw.shape}\")\n",
+    "print(f\"  Model-ready: {model.shape}\")\n",
+    "\n",
+    "print(\"\\nColumns:\")\n",
+    "print(f\"  Raw: {list(raw.columns)}\")\n",
+    "print(f\"  Model-ready: {list(model.columns)}\")\n",
+    "\n",
+    "print(\"\\nID columns removed?\")\n",
+    "print(f\"  mmsi in raw: {'mmsi' in raw.columns}, in model: {'mmsi' in model.columns}\")\n",
+    "print(f\"  Unnamed: 0 in raw: {'Unnamed: 0' in raw.columns}, in model: {'Unnamed: 0' in model.columns}\")\n",
+    "\n",
+    "print(\"\\nTarget classes:\")\n",
+    "raw_classes = raw[\"navigationalstatus\"].value_counts()\n",
+    "model_classes = model[\"navigationalstatus\"].value_counts()\n",
+    "print(f\"  Raw: {len(raw_classes)} classes\")\n",
+    "print(f\"  Model-ready: {len(model_classes)} classes\")\n",
+    "print(f\"  Dropped: {set(raw_classes.index) - set(model_classes.index)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "8d9aeaac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model-ready data saved to ../data/ais_data_model_ready.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save model-ready data in ../data/ais_data_model_ready.csv\n",
+    "model_ready_path = \"../data/ais_data_model_ready.csv\"\n",
+    "df_model.to_csv(model_ready_path, index=False)\n",
+    "print(f\"Model-ready data saved to {model_ready_path}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "17c77d74",
    "metadata": {},
