Compared models on validation set and tuned Random Forest depth

--- a/notebooks/02_modeling_evaluation.ipynb
+++ b/notebooks/02_modeling_evaluation.ipynb
@@ -543,6 +543,103 @@
    "source": [
     "# Compare Models on Validation Set "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "82aa04f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MODEL COMPARISON ON VALIDATION SET\n",
+      "\n",
+      "Logistic Regression [val] | Accuracy: 0.694 | Macro-F1: 0.343 | Weighted-F1: 0.778 | Precision (Macro): 0.276 | Recall (Macro): 0.757\n",
+      "Random Forest [val] | Accuracy: 0.985 | Macro-F1: 0.881 | Weighted-F1: 0.984 | Precision (Macro): 0.934 | Recall (Macro): 0.845\n",
+      "XGBoost [val] | Accuracy: 0.978 | Macro-F1: 0.839 | Weighted-F1: 0.978 | Precision (Macro): 0.896 | Recall (Macro): 0.803\n",
+      "\n",
+      "VALIDATION SET COMPARISON SUMMARY\n",
+      "\n",
+      "              Model  Accuracy  Macro-F1  Weighted-F1  Precision (Macro)  Recall (Macro)\n",
+      "Logistic Regression  0.693885  0.342861     0.778369           0.276232        0.757031\n",
+      "      Random Forest  0.984589  0.881134     0.984144           0.934474        0.844900\n",
+      "            XGBoost  0.978187  0.838544     0.977517           0.896033        0.802887\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"MODEL COMPARISON ON VALIDATION SET\\n\")\n",
+    "\n",
+    "# Evaluate Logistic Regression\n",
+    "lr_val_results = evaluate_classifier(\n",
+    "    logistic_regression_model,\n",
+    "    X_val_preprocessed,\n",
+    "    y_val,\n",
+    "    \"Logistic Regression\",\n",
+    "    \"val\"\n",
+    ")\n",
+    "\n",
+    "# Evaluate Random Forest\n",
+    "rf_val_results = evaluate_classifier(\n",
+    "    random_forest_model,\n",
+    "    X_val_preprocessed,\n",
+    "    y_val,\n",
+    "    \"Random Forest\",\n",
+    "    \"val\"\n",
+    ")\n",
+    "\n",
+    "# Evaluate XGBoost (with label encoder)\n",
+    "xgb_val_results = evaluate_classifier(\n",
+    "    xgboost_model,\n",
+    "    X_val_preprocessed,\n",
+    "    y_val,\n",
+    "    \"XGBoost\",\n",
+    "    \"val\",\n",
+    "    label_encoder=label_encoder\n",
+    ")\n",
+    "\n",
+    "print(\"\\nVALIDATION SET COMPARISON SUMMARY\\n\")\n",
+    "\n",
+    "# Create a comparison DataFrame\n",
+    "comparison_data = {\n",
+    "    \"Model\": [\n",
+    "        lr_val_results[\"model_name\"],\n",
+    "        rf_val_results[\"model_name\"],\n",
+    "        xgb_val_results[\"model_name\"]\n",
+    "    ],\n",
+    "    \"Accuracy\": [\n",
+    "        lr_val_results[\"accuracy\"],\n",
+    "        rf_val_results[\"accuracy\"],\n",
+    "        xgb_val_results[\"accuracy\"]\n",
+    "    ],\n",
+    "    \"Macro-F1\": [\n",
+    "        lr_val_results[\"macro_f1\"],\n",
+    "        rf_val_results[\"macro_f1\"],\n",
+    "        xgb_val_results[\"macro_f1\"]\n",
+    "    ],\n",
+    "    \"Weighted-F1\": [\n",
+    "        lr_val_results[\"weighted_f1\"],\n",
+    "        rf_val_results[\"weighted_f1\"],\n",
+    "        xgb_val_results[\"weighted_f1\"]\n",
+    "    ],\n",
+    "    \"Precision (Macro)\": [\n",
+    "        lr_val_results[\"precision_macro\"],\n",
+    "        rf_val_results[\"precision_macro\"],\n",
+    "        xgb_val_results[\"precision_macro\"]\n",
+    "    ],\n",
+    "    \"Recall (Macro)\": [\n",
+    "        lr_val_results[\"recall_macro\"],\n",
+    "        rf_val_results[\"recall_macro\"],\n",
+    "        xgb_val_results[\"recall_macro\"]\n",
+    "    ]\n",
+    "}\n",
+    "comparison_df = pd.DataFrame(comparison_data)\n",
+    "print(comparison_df.to_string(index=False))\n",
+    "print()"
+   ]
   }
  ],
  "metadata": {
